--- a/index.html
+++ b/index.html
@@ -1,19 +1,50 @@
-<!-- HTML for static distribution bundle build -->
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Swagger UI</title>
-    <link rel="stylesheet" type="text/css" href="dist/swagger-ui.css" />
-    <link rel="stylesheet" type="text/css" href="dist/index.css" />
-    <link rel="icon" type="image/png" href="dist/favicon-32x32.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="dist/favicon-16x16.png" sizes="16x16" />
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <title>Swagger UI</title>
+  <link rel="stylesheet" type="text/css" href="dist/swagger-ui.css" />
+  <link rel="stylesheet" type="text/css" href="dist/index.css" />
+  <link rel="icon" type="image/png" href="dist/favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="dist/favicon-16x16.png" sizes="16x16" />
+</head>
 
-  <body>
-    <div id="swagger-ui"></div>
-    <script src="dist/swagger-ui-bundle.js" charset="UTF-8"> </script>
-    <script src="dist/swagger-ui-standalone-preset.js" charset="UTF-8"> </script>
-    <script src="dist/swagger-initializer.js" charset="UTF-8"> </script>
-  </body>
+<body>
+<div id="swagger-ui"></div>
+
+<!-- Add links to your Swagger documents -->
+<ul>
+  <li><a href="#" onclick="loadSwagger('pet_store.yaml')">Swagger 1</a></li>
+  <li><a href="#" onclick="loadSwagger('openapi.yaml')">Swagger 2</a></li>
+</ul>
+
+<script src="dist/swagger-ui-bundle.js" charset="UTF-8"></script>
+<script src="dist/swagger-ui-standalone-preset.js" charset="UTF-8"></script>
+<script src="dist/swagger-initializer.js" charset="UTF-8"></script>
+
+<script>
+  // Function to load Swagger document dynamically
+  function loadSwagger(swaggerFile) {
+    // Destroy the existing Swagger UI instance if it exists
+    if (window.ui) {
+      window.ui.destroy();
+    }
+
+    // Load the new Swagger document
+    window.ui = SwaggerUIBundle({
+      url: swaggerFile,
+      dom_id: '#swagger-ui',
+      deepLinking: true,
+      presets: [
+        SwaggerUIBundle.presets.apis,
+        SwaggerUIStandalonePreset
+      ],
+      plugins: [
+        SwaggerUIBundle.plugins.DownloadUrl
+      ],
+      layout: "StandaloneLayout"
+    });
+  }
+</script>
+</body>
 </html>
