--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 
 <body>
 <div>
-  <ul>
-    <li><a href="#" onclick="loadSwagger('pet_store.yaml')">Swagger 1</a></li>
-    <li><a href="#" onclick="loadSwagger('openapi.yaml')">Swagger 2</a></li>
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item"><a href="#" onclick="loadSwagger('pet_store.yaml')">Swagger 1</a></li>
+    <li class="list-group-item"><a href="#" onclick="loadSwagger('openapi.yaml')">Swagger 2</a></li>
+    <li><a href="index.html">HOME</a></li>
   </ul>
 </div>
 <div id="swagger-ui"></div>
-<a href="index.html">HOME</a>
 <script src="dist/swagger-ui-bundle.js" charset="UTF-8"></script>
 <script src="dist/swagger-ui-standalone-preset.js" charset="UTF-8"></script>
 <script src="dist/load-swagger.js" charset="UTF-8"></script>
